# rebootmgr

./: .gitignore  Makefile.am  NEWS  README.md  autogen.sh  config.h.in  configure.ac  meson.build  meson_options.txt
.github/workflows/: ccpp.yml  ci-opensuse.yml  meson-sanitizer.yml  meson.yml
ci/: build.sh  install-dependencies.sh
dbus/: Makefile.am  meson.build  org.opensuse.RebootMgr.conf  org.opensuse.RebootMgr.service  org.opensuse.RebootMgr.xml  org.opensuse.rebootmgr.xml  rebootmgr-dbus.conf
etc/: Makefile.am  meson.build  rebootmgr.conf
lib/: Makefile.am  calendarspec.c  meson.build  parse-duration.c  parse-duration.h  test-parse-duration.c  time-util.h
lib/calendarspec/: calendarspec.c  calendarspec.h  meson.build  parse-duration.h  time-util.c
lib/common/: basics.h  common.h  load_config.c  log_msg.c  meson.build  mkdir_p.c  save_config.c  util.c
man/: Makefile.am  custom-html.xsl  make-man-index.py  meson.build  rebootmgr.conf.5.xml  rebootmgrctl.1.xml  rebootmgrd.8.xml
shell-completion/bash/: meson.build  rebootmgrctl
src/: .clang  Makefile.am  config_file.c  config_file.h  etcd_handler.c  etcd_handler.h  lock-etcd.c  lock-etcd.h  lock-json.c  lock-json.h  log_msg.c  log_msg.h  rebootmgr.h  rebootmgrctl.c  rebootmgrd.c  util.c  util.h  varlink-org.openSUSE.rebootmgr.c  varlink-org.openSUSE.rebootmgr.h
systemd/: Makefile.am  meson.build  rebootmgr.service  soft-reboot-cleanup.conf
tests/: Makefile.am  meson.build  test-calendarspec.c  test-etcd.c  test-json.c  test-parse-duration.c  tst-mkdir_p.c
