option('man', type: 'feature', value: 'auto',
       description: 'Generate and install manual pages')
option('xml-catalog',
       type: 'string',
       value: '/etc/xml/catalog',
       description: 'xml catalog path')
option('man-stylesheet',
       type: 'string',
       value: 'http://docbook.sourceforge.net/release/xsl/current/manpages/docbook.xsl',
       description: 'man stylesheet path')
option('bashcompletiondir', type : 'string',
       description : 'directory for bash completion scripts ["no" disables]')
